--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "classes/system"]
 	path = classes/system
-	url = https://gerrit.mcp.mirantis.net/salt-models/reclass-system
+	url = git@github.com:obourdon/reclass-system-salt-model
