Move to private repo
Change-Id: Ic422d5ed3c3abd1c817c85d3e65d2f08e491dff2

--- a/classes/cluster/os-aio-contrail/infra/config.yml
+++ b/classes/cluster/os-aio-contrail/infra/config.yml
@@ -33,7 +33,7 @@ classes:
 - cluster.os-aio-contrail
 parameters:
   _param:
-    reclass_data_repository: "https://gerrit.mcp.mirantis.net/salt-models/mcp-virtual-lab"
+    reclass_data_repository: "https://github.com/obourdon/mcp-virtual-lab"
     reclass_data_revision: master
     reclass_config_master: ${_param:infra_config_deploy_address}
     single_address: ${_param:infra_config_address}
