--- a/classes/cluster/model-manager/infra/config.yml
+++ b/classes/cluster/model-manager/infra/config.yml
@@ -13,7 +13,7 @@ classes:
 - cluster.model-manager
 parameters:
   _param:
-    reclass_data_repository: https://gerrit.mcp.mirantis.net/salt-models/mcp-virtual-lab
+    reclass_data_repository: https://github.com/obourdon/mcp-virtual-lab
     reclass_data_revision: master
     salt_master_environment_repository: "https://github.com/salt-formulas"
     salt_master_environment_revision: master
