--- a/classes/cluster/os-aio-ovs/infra/config.yml
+++ b/classes/cluster/os-aio-ovs/infra/config.yml
@@ -31,7 +31,7 @@ classes:
 - cluster.os-aio-ovs
 parameters:
   _param:
-    reclass_data_repository: https://gerrit.mcp.mirantis.net/salt-models/mcp-virtual-lab
+    reclass_data_repository: https://github.com/obourdon/mcp-virtual-lab
     reclass_data_revision: master
     salt_master_environment_repository: "https://github.com/tcpcloud"
     salt_master_environment_revision: master
