--- a/classes/cluster/virtual-mcp-ocata-cicd/infra/config.yml
+++ b/classes/cluster/virtual-mcp-ocata-cicd/infra/config.yml
@@ -28,7 +28,7 @@ classes:
 - cluster.virtual-mcp-ocata-cicd.infra
 parameters:
   _param:
-    reclass_data_repository: https://gerrit.mcp.mirantis.net/salt-models/mcp-virtual-lab
+    reclass_data_repository: https://github.com/obourdon/mcp-virtual-lab
     reclass_data_revision: master
     salt_master_environment_repository: "https://github.com/tcpcloud"
     salt_master_environment_revision: master
